--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<h1>Hello world!</h1>
-<h2>This is a website</h2>
-<h3>I just checked it what I wrote above is on the page and it is.</h3>
-<h4>That's pretty cool.</h4>
-<h5>The fonts of the words are changing.</h5>
-<h6>That's snazzy.</h6></h6></h6>
-<h1>Is this the same size?</h1></1>
+Workshop ToDo List
+Make the curriculum 4 pomodoros
+Buy workshop supplies 3 pomodoros
+Meet with the volunteer trainers 2 pomodoros
+Order food for Saturday and Saturday 1 pomodoros
+Check pre-work assignments 2 pomodoros
+Send workshop location to all the students 1 pomodoros
+Have a great workshop 0 pomodoros
+Add todo 
