--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-Workshop ToDo List
-Make the curriculum 4 pomodoros
-Buy workshop supplies 3 pomodoros
-Meet with the volunteer trainers 2 pomodoros
-Order food for Saturday and Saturday 1 pomodoros
-Check pre-work assignments 2 pomodoros
-Send workshop location to all the students 1 pomodoros
-Have a great workshop 0 pomodoros
-Add todo 
+<html>
+    <head>
+        <title>To-Do List Application</title>
+    </head>
+    <body>
+        Workshop ToDo List
+        Make the curriculum 4 pomodoros
+        Buy workshop supplies 3 pomodoros
+        Meet with the volunteer trainers 2 pomodoros
+        Order food for Saturday and Saturday 1 pomodoros
+        Check pre-work assignments 2 pomodoros
+        Send workshop location to all the students 1 pomodoros
+        Have a great workshop 0 pomodoros
+        Add todo 
+    </body>
+</html>
