Add inputs to prepare for adding additional todos to todo list

--- a/index.html
+++ b/index.html
@@ -38,5 +38,9 @@
             Add todo 
             </li>
         </ul>
+        
+        <input type="text" placeholder="Add a new todo...">
+        <input type="number" placeholder="Pomodoro estimate">
+        <input type="submit" value="Add todo">
     </body>
 </html>
