Add first style rule and link index.css to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>To-Do List Application</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>Workshop ToDo List</h1>
