--- a/index.html
+++ b/index.html
@@ -8,31 +8,38 @@
         <ul>
             <li>
                 <input type="checkbox">
-                <a href="show.html">Make the curriculum</a> 4 pomodoros
+                <a href="show.html">Make the curriculum</a> 
+                <span class="pomodoro-estimate">4 pomodoros</span>
             </li>
         <li>
             <input type="checkbox">
-            Buy workshop supplies 3 pomodoros
+            Buy workshop supplies 
+            <span class="pomodoro-estimate">3 pomodoros</span>
         </li>
             <li>
                 <input type="checkbox">
-                Meet with the volunteer trainers 2 pomodoros
+                Meet with the volunteer trainers 
+                <span class="pomodoro-estimate">2 pomodoros</span>
             </li>
         <li>
             <input type="checkbox">
-            Order food for Saturday and Saturday 1 pomodoros
+            Order food for Saturday and Saturday
+            <span class="pomodoro-estimate">1 pomodoros</span>
         </li>
             <li>
                 <input type="checkbox">
-                Check pre-work assignments 2 pomodoros
+                Check pre-work assignments 
+                <span class="pomodoro-estimate">2 pomodoros</span>
             </li>
         <li>
             <input type="checkbox">
-            Send workshop location to all the students 1 pomodoros
+            Send workshop location to all the students
+            <span class="pomodoro-estimate">1 pomodoros</span>
         </li>
             <li>
                 <input type="checkbox">
-                Have a great workshop 0 pomodoros
+                Have a great workshop
+                <span class="pomodoro-estimate">0 pomodoros</span>
             </li>
         <li>
             <input type="checkbox">
@@ -42,6 +49,6 @@
         
         <input type="text" placeholder="Add a new todo...">
         <input type="number" placeholder="Pomodoro estimate">
-        <input type="submit" value="Add todo">
+        <input id="add-new-todo-button" type="submit" value="Add todo">
     </body>
 </html>
