We got freetime

--- a/index.html
+++ b/index.html
@@ -2,53 +2,55 @@
     <head>
         <title>To-Do List Application</title>
         <link rel="stylesheet" href="index.css">
+        <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
     </head>
     <body>
         <h1>Workshop ToDo List</h1>
         <ul>
             <li>
                 <input type="checkbox">
-                <a href="show.html">Make the curriculum</a> 
+                <span class="thing-todo"><a href="show.html">Make the curriculum</a></span>
                 <span class="pomodoro-estimate">4 pomodoros</span>
             </li>
         <li>
             <input type="checkbox">
-            Buy workshop supplies 
+            <span class="thing-todo">Buy workshop supplies</span>
             <span class="pomodoro-estimate">3 pomodoros</span>
         </li>
             <li>
                 <input type="checkbox">
-                Meet with the volunteer trainers 
+                <span class="thing-todo">Meet with the volunteer trainers</span>
                 <span class="pomodoro-estimate">2 pomodoros</span>
             </li>
         <li>
             <input type="checkbox">
-            Order food for Saturday and Saturday
+            <span class="thing-todo">Order food for Saturday and Saturday</span>
             <span class="pomodoro-estimate">1 pomodoros</span>
+            
         </li>
             <li>
                 <input type="checkbox">
-                Check pre-work assignments 
+                <span class="thing-todo">Check pre-work assignments</span>
                 <span class="pomodoro-estimate">2 pomodoros</span>
             </li>
         <li>
             <input type="checkbox">
-            Send workshop location to all the students
+            <span class="thing-todo">Send workshop location to all the students</span>
             <span class="pomodoro-estimate">1 pomodoros</span>
         </li>
             <li>
                 <input type="checkbox">
-                Have a great workshop
+                <span class="thing-todo">Have a great workshop</span>
                 <span class="pomodoro-estimate">0 pomodoros</span>
             </li>
         <li>
-            <input type="checkbox">
-            Add todo 
+            <input type="checkbox"
             </li>
         </ul>
         
         <input type="text" placeholder="Add a new todo...">
         <input type="number" placeholder="Pomodoro estimate">
         <input id="add-new-todo-button" type="submit" value="Add todo">
+        <input type="text" placeholder="Description">
     </body>
 </html>
